Fix alignment of location suggestions box.
(Received permission from Lachie to do so)

--- a/src/main/resources/static/css/form.css
+++ b/src/main/resources/static/css/form.css
@@ -93,7 +93,6 @@ label {
 
 /* For location autocomplete */
 #autocompleteSuggestions {
-    position: absolute;
     z-index: 9999;
     width: 25vw; /* Adjust the width as needed */
     background-color: #fff;
